// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenStack
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSScreen
      collapsable={false}
      forwardedRef={[Function]}
      gestureResponseDistance={
        {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      nativeBackButtonDismissalEnabled={false}
      onAppear={[Function]}
      onDisappear={[Function]}
      onDismissed={[Function]}
      onHeaderBackButtonClicked={[Function]}
      onNativeDismissCancelled={[Function]}
      onTransitionProgress={[Function]}
      onWillDisappear={[Function]}
      replaceAnimation="push"
      stackPresentation="push"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      swipeDirection="horizontal"
    >
      <RNSScreenStackHeaderConfig
        backButtonInCustomView={false}
        backgroundColor="rgb(255, 255, 255)"
        color="rgb(0, 122, 255)"
        direction="ltr"
        disableBackButtonMenu={false}
        hidden={true}
        hideBackButton={false}
        largeTitleHideShadow={false}
        title="HomeScreen"
        titleColor="rgb(28, 28, 30)"
        topInsetEnabled={false}
        translucent={false}
      />
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        style={
          {
            "flex": 1,
            "flexDirection": "column-reverse",
          }
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "backgroundColor": "rgb(242, 242, 242)",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#6200EE",
                  "flex": 1,
                  "overflow": "hidden",
                },
                {
                  "backgroundColor": "#FF5D8F",
                },
              ]
            }
          >
            <View
              onLayout={[Function]}
              style={
                [
                  undefined,
                  {
                    "height": undefined,
                  },
                ]
              }
            >
              <RNCSafeAreaView
                edges={
                  [
                    "bottom",
                    "left",
                    "right",
                    "top",
                  ]
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "transparent",
                      "height": 40,
                      "padding": 10,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                      "zIndex": 4,
                    }
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "height": 44,
                          "justifyContent": "space-between",
                          "paddingHorizontal": 16,
                        },
                        undefined,
                      ]
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "marginEnd": 20,
                            "marginStart": -12,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        size={24}
                        style={
                          [
                            {
                              "borderRadius": 24,
                              "height": 48,
                              "overflow": "hidden",
                              "width": 48,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": undefined,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onLayout={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            [
                              {
                                "bottom": 0,
                                "left": 0,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                              },
                              {
                                "alignItems": "center",
                                "justifyContent": "center",
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "bottom": 0,
                                  "left": 0,
                                  "position": "absolute",
                                  "right": 0,
                                  "top": 0,
                                },
                                {
                                  "backgroundColor": "transparent",
                                },
                                {
                                  "transition": "background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
                                },
                              ]
                            }
                          />
                          <Text
                            allowFontScaling={false}
                            selectable={false}
                            style={
                              [
                                {
                                  "color": "#FFFFFF",
                                  "fontSize": 38,
                                },
                                undefined,
                                {
                                  "fontFamily": "material-community",
                                  "fontStyle": "normal",
                                  "fontWeight": "normal",
                                },
                                {},
                              ]
                            }
                          >
                            󰍜
                          </Text>
                        </View>
                      </View>
                    </View>
                    <View
                      style={
                        [
                          {
                            "flex": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        style={
                          [
                            {
                              "fontSize": 20,
                              "fontWeight": "500",
                              "letterSpacing": 0.15,
                            },
                            {
                              "color": "#000000",
                            },
                            [
                              {
                                "color": "#FFFFFF",
                              },
                              {
                                "fontSize": 35,
                                "fontWeight": "bold",
                              },
                            ],
                          ]
                        }
                      >
                        Ciclo Seguro
                      </Text>
                    </View>
                  </View>
                </View>
              </RNCSafeAreaView>
            </View>
            <View
              onLayout={[Function]}
              style={
                [
                  undefined,
                  {
                    "height": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "padding": 4,
                    "paddingTop": 0,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#FF5D8F",
                      "padding": 20,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "white",
                        "fontSize": 20,
                        "fontWeight": "bold",
                        "marginBottom": 20,
                      }
                    }
                  >
                    Menu
                  </Text>
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "marginBottom": 20,
                        }
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        selectable={false}
                        style={
                          [
                            {
                              "color": "white",
                              "fontSize": 24,
                            },
                            undefined,
                            {
                              "fontFamily": "material-community",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            {},
                          ]
                        }
                      >
                        󰋜
                      </Text>
                      <Text
                        style={
                          {
                            "color": "white",
                            "fontSize": 20,
                            "marginLeft": 16,
                          }
                        }
                      >
                        Tela Inicial
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#00000014",
                          "height": 1,
                          "marginEnd": undefined,
                          "marginStart": 40,
                        },
                        {
                          "marginBottom": 10,
                        },
                      ]
                    }
                  />
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "marginBottom": 10,
                          "marginTop": 5,
                        }
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        selectable={false}
                        style={
                          [
                            {
                              "color": "white",
                              "fontSize": 24,
                            },
                            undefined,
                            {
                              "fontFamily": "material-community",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            {},
                          ]
                        }
                      >
                        󰛋
                      </Text>
                      <Text
                        style={
                          {
                            "color": "white",
                            "fontSize": 20,
                            "marginLeft": 16,
                          }
                        }
                      >
                        Contatos
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomEndRadius": 0,
                  "borderBottomStartRadius": 0,
                  "borderTopEndRadius": 16,
                  "borderTopStartRadius": 16,
                  "bottom": 0,
                  "elevation": 1,
                  "end": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                  "start": 0,
                  "top": 0,
                  "transform": [
                    {
                      "translateY": 0,
                    },
                  ],
                }
              }
            >
              <View
                style={
                  [
                    {
                      "marginHorizontal": 16,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "paddingVertical": 12,
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "flex": 1,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      style={
                        [
                          {
                            "fontSize": 16,
                            "letterSpacing": 0.15,
                          },
                          {
                            "color": "#000000",
                          },
                          {
                            "color": "#000000",
                          },
                        ]
                      }
                    >
                      Enviar Localização
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    [
                      {
                        "backgroundColor": "#00000014",
                        "height": 1,
                        "marginEnd": undefined,
                        "marginStart": undefined,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#ffffff",
                    "flex": 1,
                    "padding": 16,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  }
                }
              >
                <Modal
                  animationType="fade"
                  hardwareAccelerated={false}
                  style={
                    {
                      "zIndex": 1000,
                    }
                  }
                  transparent={true}
                  visible={false}
                />
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "justifyContent": "center",
                    }
                  }
                >
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FF5D8F",
                        "borderRadius": 60,
                        "elevation": 6,
                        "height": 110,
                        "justifyContent": "center",
                        "opacity": 1,
                        "shadowColor": "#000",
                        "shadowOffset": {
                          "height": 3,
                          "width": 0,
                        },
                        "shadowOpacity": 0.27,
                        "shadowRadius": 4.65,
                        "width": 110,
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "white",
                            "fontSize": 60,
                          },
                          undefined,
                          {
                            "fontFamily": "material",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenStack>
</RNCSafeAreaProvider>
`;

exports[`App should render correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenStack
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSScreen
      collapsable={false}
      forwardedRef={[Function]}
      gestureResponseDistance={
        {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      nativeBackButtonDismissalEnabled={false}
      onAppear={[Function]}
      onDisappear={[Function]}
      onDismissed={[Function]}
      onHeaderBackButtonClicked={[Function]}
      onNativeDismissCancelled={[Function]}
      onTransitionProgress={[Function]}
      onWillDisappear={[Function]}
      replaceAnimation="push"
      stackPresentation="push"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      swipeDirection="horizontal"
    >
      <RNSScreenStackHeaderConfig
        backButtonInCustomView={false}
        backgroundColor="rgb(255, 255, 255)"
        color="rgb(0, 122, 255)"
        direction="ltr"
        disableBackButtonMenu={false}
        hidden={true}
        hideBackButton={false}
        largeTitleHideShadow={false}
        title="HomeScreen"
        titleColor="rgb(28, 28, 30)"
        topInsetEnabled={false}
        translucent={false}
      />
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        style={
          {
            "flex": 1,
            "flexDirection": "column-reverse",
          }
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "backgroundColor": "rgb(242, 242, 242)",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#6200EE",
                  "flex": 1,
                  "overflow": "hidden",
                },
                {
                  "backgroundColor": "#FF5D8F",
                },
              ]
            }
          >
            <View
              onLayout={[Function]}
              style={
                [
                  undefined,
                  {
                    "height": undefined,
                  },
                ]
              }
            >
              <RNCSafeAreaView
                edges={
                  [
                    "bottom",
                    "left",
                    "right",
                    "top",
                  ]
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "transparent",
                      "height": 40,
                      "padding": 10,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                      "zIndex": 4,
                    }
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "height": 44,
                          "justifyContent": "space-between",
                          "paddingHorizontal": 16,
                        },
                        undefined,
                      ]
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "marginEnd": 20,
                            "marginStart": -12,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        size={24}
                        style={
                          [
                            {
                              "borderRadius": 24,
                              "height": 48,
                              "overflow": "hidden",
                              "width": 48,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": undefined,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onLayout={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            [
                              {
                                "bottom": 0,
                                "left": 0,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                              },
                              {
                                "alignItems": "center",
                                "justifyContent": "center",
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "bottom": 0,
                                  "left": 0,
                                  "position": "absolute",
                                  "right": 0,
                                  "top": 0,
                                },
                                {
                                  "backgroundColor": "transparent",
                                },
                                {
                                  "transition": "background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
                                },
                              ]
                            }
                          />
                          <Text />
                        </View>
                      </View>
                    </View>
                    <View
                      style={
                        [
                          {
                            "flex": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        style={
                          [
                            {
                              "fontSize": 20,
                              "fontWeight": "500",
                              "letterSpacing": 0.15,
                            },
                            {
                              "color": "#000000",
                            },
                            [
                              {
                                "color": "#FFFFFF",
                              },
                              {
                                "fontSize": 35,
                                "fontWeight": "bold",
                              },
                            ],
                          ]
                        }
                      >
                        Ciclo Seguro
                      </Text>
                    </View>
                  </View>
                </View>
              </RNCSafeAreaView>
            </View>
            <View
              onLayout={[Function]}
              style={
                [
                  undefined,
                  {
                    "height": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "padding": 4,
                    "paddingTop": 0,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#FF5D8F",
                      "padding": 20,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "white",
                        "fontSize": 20,
                        "fontWeight": "bold",
                        "marginBottom": 20,
                      }
                    }
                  >
                    Menu
                  </Text>
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "marginBottom": 20,
                        }
                      }
                    >
                      <Text />
                      <Text
                        style={
                          {
                            "color": "white",
                            "fontSize": 20,
                            "marginLeft": 16,
                          }
                        }
                      >
                        Tela Inicial
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#00000014",
                          "height": 1,
                          "marginEnd": undefined,
                          "marginStart": 40,
                        },
                        {
                          "marginBottom": 10,
                        },
                      ]
                    }
                  />
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "marginBottom": 10,
                          "marginTop": 5,
                        }
                      }
                    >
                      <Text />
                      <Text
                        style={
                          {
                            "color": "white",
                            "fontSize": 20,
                            "marginLeft": 16,
                          }
                        }
                      >
                        Contatos
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomEndRadius": 0,
                  "borderBottomStartRadius": 0,
                  "borderTopEndRadius": 16,
                  "borderTopStartRadius": 16,
                  "bottom": 0,
                  "elevation": 1,
                  "end": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                  "start": 0,
                  "top": 0,
                  "transform": [
                    {
                      "translateY": 0,
                    },
                  ],
                }
              }
            >
              <View
                style={
                  [
                    {
                      "marginHorizontal": 16,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "paddingVertical": 12,
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "flex": 1,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      style={
                        [
                          {
                            "fontSize": 16,
                            "letterSpacing": 0.15,
                          },
                          {
                            "color": "#000000",
                          },
                          {
                            "color": "#000000",
                          },
                        ]
                      }
                    >
                      Enviar Localização
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    [
                      {
                        "backgroundColor": "#00000014",
                        "height": 1,
                        "marginEnd": undefined,
                        "marginStart": undefined,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#ffffff",
                    "flex": 1,
                    "padding": 16,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  }
                }
              >
                <Modal
                  animationType="fade"
                  hardwareAccelerated={false}
                  style={
                    {
                      "zIndex": 1000,
                    }
                  }
                  transparent={true}
                  visible={false}
                />
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "justifyContent": "center",
                    }
                  }
                >
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FF5D8F",
                        "borderRadius": 60,
                        "elevation": 6,
                        "height": 110,
                        "justifyContent": "center",
                        "opacity": 1,
                        "shadowColor": "#000",
                        "shadowOffset": {
                          "height": 3,
                          "width": 0,
                        },
                        "shadowOpacity": 0.27,
                        "shadowRadius": 4.65,
                        "width": 110,
                      }
                    }
                  >
                    <Text />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenStack>
</RNCSafeAreaProvider>
`;
